onDragListener refactor